Fixed issue where top of pages was messy and jumpy while loading top image.

--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,10 @@ and (min-width : 300px) {
 }
 .topimage {
     width: 100%;
+    margin-bottom: -48vw;
+}
+.imageGap {
+    height: 48vw;
 }
 #slider img {
     transition: opacity 1.5s;
@@ -153,6 +157,10 @@ and (max-width : 501px) {
     width: 100%;
     height: 500px;
     object-fit: cover;
+    margin-bottom: -485px;
+}
+.imageGap {
+    height: 485px;
 }
 }
 
